2009-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.c:
	Add plot canvas to the focus list so that hotkeys work in Firefox.

2009-04-04  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot2d.c (eval_plots): Initialize newhistogram line type to
	current plot linetype. Otherwise "set style incr user" fails.
	Bug #2725577

2009-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Track current and previous linewidth, so that we 
	can issue an explicit "PL"  (stroke and set linewidth) if it has
	changed.
	Bug #2725599

2009-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.css term/js/gnuplot_mouse.js
	term/js/gnuplot_common.js term/js/textzoom.png:

	Revise canvas terminal to provide additional client-side interactions.
	- Left mouse-click annotates the graph
	- Client side click-and-drag zooming of plots
	- Hotkey support (doesn't work in Firefox for some reason)
	- Coordinate space is oversampled to retain precision when zoomed
	The size of output *.js files is reduced by roughly 25% by using a set
	of shared routines kept in a separate file gnuplot_common.js

2009-03-31  James R. Van Zandt  <jrvz@comcast.net>

	* src/parse.c (empty_iteration): Iteration accepts negative
	increments.

2009-03-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Reserve room for user tic labels even if
	the format for autoticks is "".

	* src/set.c (load_tics) src/save.c (save_tics):  Do not save or restore
	axis tic labels that were read from a data file.
	Bug #2711994

2009-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Fix bug that caused the left/right
	margin offsets to be applied twice, leading to too-wide margins.
	Bug #2714997

2009-03-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_list): Indexing istart from 1 otherwise