@@ -1,3 +1,12 @@
+2009-04-12  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c (find_maxl_keys3d):  Fix incorrect layout of key box in
+	plots with labeled contours (e.g. contours.dem plot #21).
+
+	* src/graph3d.c src/graph3d.h src/set.c src/unset.c docs/gnuplot.doc:
+	Add a per-plot attribute "nosurface", allowing an individual plot to 
+	opt out of the global 3D setting "set surface".
+
 2009-04-05  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/canvas.trm term/js/gnuplot_mouse.c:
